# evaluation

./: CMakeLists.txt  README.md
config/: evaluation_pose.yaml
lib/include/: adjust.h  configer.h  extract.h  packer.h  plot.h  plotter.h  pose_main.h  read_ros2bag.h  ros1_extract_pose_with_cov.h  sub_eagleeye_evaluation.h  sub_ndt_evaluation.h  twist_main.h  util_eagleeye.h  yaml_param.h
res/: print.txt  sync_EKF_df.csv  sync_NDT_df.csv  sync_Reference_df.csv  sync_Reference_ndt_error.csv
src/: adjust.cpp  configer.cpp  extract.cpp  main.cpp  packer copy.cpp  packer.cpp  plotter copy.cpp  plotter.cpp  posemain.cpp  readros2bag.cpp  ros1extractposewithcov.cpp  subeagleeyeevaluation.cpp  subndtevaluation.cpp  twistmain.cpp  utileagleeye.cpp  yamlparam.cpp
